<resources>
    <string name="app_name">Youth Connect</string>
    <string name="databaseName">AYIGConnect</string>
    <string name="databaseTable">Users</string>
    <string name="ID">id</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="appTitle">Youth Connect</string>
    <string name="hintUser">username</string>
    <string name="hintName">Name</string>
    <string name="hintSurname">Surname</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintPassword">Password</string>

    <string name="btnReg">Register</string>
    <string name="btnAffiliate">Affiliate</string>
    <string name="btnAdmin">Administrator</string>
    <string name="btnAllData">All Data</string>
    <string name="btnLogin">Login</string>
    <string name="btnViewEvents">View Events and Activities</string>
    <string name="btnDelEvents">Delete Events and Activities</string>

    <string name="btnUpdateEvents">Update Events and Activities</string>
    <string name="title_activity_events">EventsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>