<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAffiliateFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/name"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/hintUser"

                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="9dp"
                android:background="@color/material_dynamic_primary10"
                android:text="@string/btnViewEvents"
                android:textColor="@color/purple_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtFragHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryVariant"
                android:text="@string/btnAffiliate"
                android:textSize="20sp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>